# Printscreen

./: CODE_OF_CONDUCT.md  LICENSE  README.md
C++ SKSE PLUGIN CODE/: CMakeLists.txt  CMakePresets.json  PCH.h  plugin.cpp  vcpkg-configuration.json  vcpkg.json
Papyrus Code Structure/: PrintScreen.esm
Papyrus Code Structure/SKSE/Plugins/StorageUtilData/: Printscreen_Configure.json
Papyrus Code Structure/Scripts/: PrintScreen_Formula_Script.pex  PrintScreen_MCM_Script.pex  PrintScreen_ME_Script.pex  PrintScreen_MainQuest_Script.pex  PrintScreen_Map_Script.pex  Printscreen_PlaRef_Script.pex
Papyrus Code Structure/Scripts/Source/: PrintScreen_Formula_Script.psc  PrintScreen_MCM_Script.psc  PrintScreen_ME_Script.psc  PrintScreen_MainQuest_Script.psc  Printscreen_PlaRef_Script.psc
